--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -25,7 +25,8 @@ img {
 }
 
 .container {
-    width: 1320px;
+    max-width: 1151px;
+    width: 100%;
     padding: 0 20px;
     margin: 0 auto;
 }
